@@ -639,8 +639,10 @@ public class ImportCSSVSNew extends CodeSystemImport implements ICodeSystemImpor
                 }
                 catch (Exception exRollback)
                 {
-                    logger.info(exRollback.getMessage());
-                    logger.info("[ImportSVS.java] Rollback fehlgeschlagen!");
+                    if(!hb_session.getTransaction().wasRolledBack()){
+                        logger.info(exRollback.getMessage());
+                        logger.info("[ImportSVS.java] Rollback fehlgeschlagen!");
+                    }
                 }
             }
             finally
