@@ -754,8 +754,10 @@ public class ImportLeiKatAt
         }
         catch (Exception exRollback)
         {
-          logger.info(exRollback.getMessage());
-          logger.info("[ImportLeiKat.java] Rollback fehlgeschlagen!");
+            if(!hb_session.getTransaction().wasRolledBack()){
+                logger.info(exRollback.getMessage());
+                logger.info("[ImportLeiKat.java] Rollback fehlgeschlagen!");
+            }
         }
       }
       finally
